# PEGASUS

./: .gitignore  CMakeLists.txt
GUI/grid_test/: CMakeLists.txt  dev_start.sh
GUI/grid_test/src/: GridWidget.cpp  GridWidget.h  main.cpp
GUI/hud/: CMakeLists.txt  DataSource.h  DummyDataSource.h  DummySource.h  HudSample.h  HudWidget.cpp  HudWidget.h  IDataSource.h  UartCborSource.cpp  UartCborSource.h  dev_start.sh  main.cpp  start.sh
qml/: main.qml  qml.qrc
src/: main.cpp  oled_test_main.cpp  ssd1306.cpp  ssd1306.h
